styled the search bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,3 +43,11 @@
 .hidden {
   display: none;
 }
+
+.on-load {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+}
