--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
   color: aliceblue;
   transition-duration: 400ms;
   cursor: pointer;
-} 
+}
 
 .modal-card-title {
   font-size: 1.5em;
@@ -42,6 +42,11 @@
 
 .column-heading {
   font-weight: bold;
+  font-size: 1.3em;
+  background-color: teal;
+  color: white;
+  padding: 5.9px 0px 5.9px 4%;
+  border-radius: 3px 3px 0px 0px;
 }
 
 .hidden {
