--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,29 @@
-.message-header {
-  font-size: 1.4em;
-}
-
 .content p:not(:last-child) {
   margin-bottom: 0px;
 }
 
-.box {
-  font-size: 1.1em;
-}
-
-#search-area {
-  display: flex;
-  width: 100%;
-  align-items: center;
-}
-
-#submit-form {
-  width: 100%;
-  margin: 1.5% auto;
-}
-
-#focus-container {
-  height: 58.5vh;
-  overflow-y: auto;
+.js-modal-trigger {
+  font-size: 1.2em;
   font-weight: 500;
 }
 
-.main-title {
-  text-decoration: underline;
+.js-modal-trigger:hover {
+  background-color: lightseagreen;
+  color: aliceblue;
+  transition-duration: 400ms;
+  cursor: pointer;
 }
 
-.words-container {
-  height: 58.5vh;
-  overflow-y: auto;
+.modal-card-title {
+  font-size: 1.5em;
   font-weight: 500;
+}
+
+.modal-card-title:hover {
+  background-color: lightseagreen;
+  color: aliceblue;
+  transition-duration: 400ms;
+  cursor: pointer;
 }
 
 .dropdown-item {
@@ -51,11 +40,41 @@
   cursor: pointer;
 }
 
+.column-heading {
+  font-weight: bold;
+  font-size: 1.3em;
+  background-color: teal;
+  color: white;
+  padding: 5.9px 0px 5.9px 2%;
+  border-radius: 3px 3px 0px 0px;
+}
+
+.scroll {
+  overflow-y: scroll;
+  height: 58vh;
+}
+
+.scroll2 {
+  overflow-y: scroll;
+  height: 34vh;
+}
+
+.hidden {
+  display: none;
+}
+
+.on-load {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+}
+
 .dropdown-content-fix {
   border-radius: 0;
   box-shadow: 0;
-  padding: 0;
-  border: 0;
+  padding: 0
 }
 
 .dropdown-item-fix {
@@ -70,59 +89,25 @@
   border-width: 0px;
 }
 
-.dropdown-menu {
-  overflow-y: auto;
+.search-form-before {
+  width: 50%;
 }
 
-.dropdown-length1 {
-  max-height: 34vh;
+.search-form-after {
+  width: 100%;
 }
 
-.dropdown-length2 {
-  max-height: 67vh;
+.control.has-icons-right .input {
+  padding: 5.9px 5px 5.9px 2%;
 }
 
-.pronunciation-text:hover {
-  background-color: lightseagreen;
-  color: aliceblue;
-  transition-duration: 400ms;
-  cursor: pointer;
+.message-header {
+  padding: .4em 1em;
 }
 
-.js-modal-trigger:hover {
-  background-color: lightseagreen;
-  color: aliceblue;
-  transition-duration: 400ms;
-  cursor: pointer;
-}
-
-.on-load {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  flex-direction: column;
-}
-
-.hidden {
-  display: none;
-}
-
-.modal {
-  display: none;
-}
-
-.modal-card-title {
-  text-decoration: underline;
+#mainWord {
   font-size: 1.5em;
-  font-weight: 500;
-}
-
-.modal-card-title:hover {
-  background-color: lightseagreen;
-  color: aliceblue;
-  transition-duration: 400ms;
-  cursor: pointer;
+  /* padding: 5.9px 5px 5.9px 2%; */
 }
 
 .tooltip {
@@ -130,7 +115,7 @@
   display: inline-block;
 }
 
-.tooltip .tooltip-text {
+.tooltip .tooltiptext {
   visibility: hidden;
   width: fit-content;
   background-color: lightgray;
@@ -143,7 +128,7 @@
   box-shadow: 5px 5px 5px 5px darkgray;
 }
 
-.tooltip .tooltip-text::after {
+.tooltip .tooltiptext::after {
   position: relative;
   width: fit-content;
   font-weight: 400;
@@ -155,6 +140,6 @@
   background-color: whitesmoke;
 }
 
-.tooltip:hover .tooltip-text {
+.tooltip:hover .tooltiptext {
   visibility: visible;
 }
