--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,7 @@
 #main-pronunciation {
   font-size: 1.2em;
   font-weight: 500;
- cursor: pointer;
+  cursor: pointer;
 }
 
 #main-pronunciation-hover:hover {
@@ -210,12 +210,12 @@
     transition-duration: 400ms;
     cursor: pointer;
 } */
-  
+
 #modal-pronunciation {
-    font-size: 1.2em;
-    font-weight: 500;
-    cursor: pointer;
-  }
+  font-size: 1.2em;
+  font-weight: 500;
+  cursor: pointer;
+}
 
 #modal-pronunciation-hover:hover {
   background-color: lightseagreen !important;
@@ -224,3 +224,99 @@
   cursor: pointer !important;
 }
 
+@media screen and (max-width:1030px) {
+  .blank-screen {
+    width: 75%;
+  }
+
+  #focus-column {
+    width: 33%;
+  }
+}
+
+@media screen and (max-width:900px) {
+  #focus-column {
+    width: 25%;
+  }
+}
+
+@media screen and (max-width:780px) {
+  #focus-column {
+    width: 100%;
+  }
+
+  #focus-container {
+    max-height: 35vh;
+    height: auto;
+  }
+
+  .words-container {
+    max-height: 35vh;
+    height: auto;
+  }
+
+  .words-column {
+    width: 33vh;
+  }
+
+  #search-results {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media screen and (max-width:680px) {
+  .blank-screen {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width:500px) {
+  #search-area {
+    flex-direction: column;
+  }
+
+  #input-box {
+    padding: 5px 1em;
+  }
+
+  #search-history-container {
+    width: 100%;
+  }
+
+  #dropdown-container {
+    width: 100%;
+  }
+
+  #search-button {
+    padding: 5px;
+  }
+
+  #search-history-button {
+    width: 100%;
+  }
+
+  .words-column {
+    width: 95%;
+  }
+
+  #column-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #focus-column {
+    width: 95%;
+  }
+
+  #search-results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #column2 {
+    width: 100%;
+  }
+}
